# itunes_reorganizer

./: .gitignore  README.md  itunes_reorganizer_spec.md  itunes_reorganizer_v2_repo_aligned.md  pyproject.toml
itunes_reorganizer/: __init__.py  __main__.py  album_grouper.py  config.py  errors.py  executor.py  grouping.py  main.py  metadata.py  models.py  musicbrainz_client.py  naming.py  planner.py  progress.py  release_classifier.py  reporting.py  router.py  scanner.py  setup.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_grouping.py  test_metadata.py  test_models.py  test_naming.py  test_planner.py  test_release_classifier.py  test_reporting.py  test_router.py
